--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "materialize": "^1.0.0",
     "vue": "^2.5.22",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "jquery": "^3.3.1"
   }
 }
