--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "mongoose": "^5.4.7",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "pug": "2.0.0-beta11",
